update RequestParser to handle line breaks in payload