@@ -1,11 +1,13 @@
 package server.router;
 
-import java.util.Arrays;
 import java.util.List;
 import server.request.Request;
 import server.response.Response;
+import server.router.routes.HeadRequest;
 import server.router.routes.NotFound;
 import server.router.routes.Route;
+import server.router.routes.SimpleGet;
+import server.router.routes.SimpleGetWithBody;
 
 public class RequestRouter {
   private Request request;
@@ -23,10 +25,10 @@ public class RequestRouter {
   }
 
   private List<Route> getAllRoutes() {
-    return Arrays.asList(
-            new Route(request, "/simple_get", List.of("GET"), null),
-            new Route(request, "/simple_get_with_body", List.of("GET"), "Hello world"),
-            new Route(request, "/head_request", Arrays.asList("HEAD", "OPTIONS"), null)
+    return List.of(
+            new SimpleGet(request),
+            new SimpleGetWithBody(request),
+            new HeadRequest(request)
     );
   }
 }
